[project]
name = "kunit"
version = "0.1.0"
description = "LS-DYNA unit converter for HE applications with fixed-width awareness"
readme = "AGENTS.md"
requires-python = ">=3.11"
authors = [{ name = "kunit" }]
license = { text = "Proprietary" }
dependencies = [
    "click>=8.1",
    "flask>=3.0",
    "flask-babel>=4.0",
    "gunicorn>=21.2",
]

[project.scripts]
kunit = "kunit.cli:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kunit"]
include = [
    "kunit/web/templates/*.html",
    "kunit/web/materials/*.toml",
    "kunit/web/translations/**",
]
